# cocogo

./: .gitignore  README.md  pyproject.toml
cocogo/: __init__.py  __main__.py  consts.py  count.py  detail.py  info.py  main.py  models.py  optimize.py  utilities.py  version.py
tests/: test_cocogo.py
